--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "apexcharts": "^3.54.1",
     "chart.js": "^4.4.5",
-    "chartjs-chart-geo": "^4.3.3"
+    "chartjs-chart-geo": "^4.3.3",
+    "chartjs-plugin-zoom": "^2.0.1"
   }
 }
